src/test/ui/issues/issue-50264-inner-deref-trait/result_deref_ok.stderr
error[E0599]: no method named `deref_ok` found for type `std::result::Result<{integer}, _>` in the current scope
  --> $DIR/result_deref_ok.rs:14:27
   |
LL |     let _result = &Ok(42).deref_ok();
   |                           ^^^^^^^^
   |
   = note: the method `deref_ok` exists but the following trait bounds were not satisfied:
           `{integer} : std::ops::Deref`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
